openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unreal-operations
spec:
  selector:
    app: unreal-operations
  ports:
    - name: http
      port: 8080
      targetPort: 8080
